# e-voting-simulation

./: .gitignore  CMakeLists.txt  opp_cmake.py
data-analysis/: executionFunctions.R  importScript.R  pcapToCsv.sh  pcapToCsvGenerated.sh  setupFunctions.R  testExecutionFunctions.R  testSetupFunctions.R
examples/did-e-voting-execution/: CMakeLists.txt  clean_results.sh  importNetwork.sh
examples/did-e-voting-execution-n/: CMakeLists.txt  generate.sh  importNetwork.sh  run.sh
examples/did-e-voting-execution-n/run/: omnetpp.ini
examples/did-e-voting-execution-n/run/res/registry/: end.Simulation.ethHost1.app[0].json  end.Simulation.ethHost1.json  end.Simulation.ethHost2.app[0].json  end.Simulation.ethHost3.app[0].json  end.Simulation.ethHost4.app[0].json  end.Simulation.ethHost4.json  end.Simulation.ethHost5.app[0].json  end.Simulation.ethHost6.app[0].json  end.Simulation.ethHost7.app[0].json  end.Simulation.ethHost8.app[0].json
examples/did-e-voting-execution-n/run/res/resources/: end.Simulation.ethHost8.app[0].json
examples/did-e-voting-execution-n/src/: DidVotingApp.ned  Voting.ned
examples/did-e-voting-execution/run/: omnetpp.ini
examples/did-e-voting-execution/run/res/registry/: end.Simulation.ethHost1.app[0].json  end.Simulation.ethHost1.json  end.Simulation.ethHost2.app[0].json  end.Simulation.ethHost2.json  end.Simulation.ethHost3.app[0].json  end.Simulation.ethHost3.json  end.Simulation.ethHost4.app[0].json  end.Simulation.ethHost4.json
examples/did-e-voting-execution/run/res/resources/: end.Simulation.ethHost1.json  end.Simulation.ethHost2.app[0].json  end.Simulation.ethHost2.json  end.Simulation.ethHost3.app[0].json  end.Simulation.ethHost3.json  end.Simulation.ethHost4.json
examples/did-e-voting-execution/src/: DidVotingApp.cc  DidVotingApp.h  DidVotingApp.ned  Voting.ned  package.ned
examples/did-e-voting-setup/: CMakeLists.txt
examples/did-e-voting-setup-n/: CMakeLists.txt  clean_results.sh  generate.sh  importNetwork.sh  run.sh
examples/did-e-voting-setup-n/run/: omnetpp.ini
examples/did-e-voting-setup-n/src/: DidVotingSetupApp.ned  Voting.ned
examples/did-e-voting-setup/run/: omnetpp.ini
examples/did-e-voting-setup/src/: DidVotingSetupApp.cc  DidVotingSetupApp.h  DidVotingSetupApp.ned
examples/e-voting/: CMakeLists.txt
examples/e-voting-execution/: CMakeLists.txt  importNetwork.sh
examples/e-voting-execution-n/: CMakeLists.txt  generate.sh  run.sh
examples/e-voting-execution-n/run/: connections.json  omnetpp.ini
examples/e-voting-execution-n/src/: Voting.ned  VotingApp.ned
examples/e-voting-execution/run/: omnetpp.ini  peers.json
examples/e-voting-execution/run/results/: General-#0.elog  General-#0.vci  General-#0.vec  PcapRecording-#0.sca  PcapRecording-#0.vci  PcapRecording-#0.vec  ethHost1.ip.pcap  ethHost1.pcap  ethHost2.ip.pcap  ethHost3.ip.pcap  ethHost4.ip.pcap  router1.eth.pcap  router1.ppp.pcap
examples/e-voting-execution/run/results/connection/: peers_after_data_received_reply_Simulation.ethHost1.json  peers_after_data_received_reply_Simulation.ethHost2.json  peers_after_data_received_reply_Simulation.ethHost3.json  peers_after_data_send_Simulation.ethHost3.json  peers_after_data_send_Simulation.ethHost4.json  peers_at_start_Simulation.ethHost1.json
examples/e-voting-execution/src/: VotingApp.cc  VotingApp.h  VotingApp.ned
examples/e-voting-setup/: CMakeLists.txt
examples/e-voting-setup-n/: CMakeLists.txt  clean_results.sh  generate.sh  run.sh
examples/e-voting-setup-n/run/: omnetpp.ini
examples/e-voting-setup-n/src/: Voting.ned  VotingSetupApp.ned
examples/e-voting-setup/run/: omnetpp.ini
examples/e-voting-setup/src/: VotingSetupApp.cc  VotingSetupApp.h  VotingSetupApp.ned
examples/e-voting/run/: omnetpp.ini
examples/e-voting/src/: PacketsKind.h  VotingApp.cc  VotingApp.h  VotingApp.ned  VotingAppActivePacketSource.cpp  VotingAppActivePacketSource.h  VotingAppActivePacketSource.ned  VotingAppConnectionRequestReply.cpp  VotingAppConnectionRequestReply.h  VotingAppConnectionRequestReply.ned  VotingAppForward.cc  VotingAppForward.h  VotingAppForward.ned  VotingNetworkRequestConnection.ned  inetSocketAdapter.cpp  inetSocketAdapter.h
examples/pcaprecorder/: CMakeLists.txt
examples/pcaprecorder/run/: omnetpp.ini
examples/pcaprecorder/src/: PcapRecorder.cc  PcapRecorder.h  PcapRecorder.ned  package.ned
src/: PacketsKind.h  inetSocketAdapter.cpp  inetSocketAdapter.h
